# Drift

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: docs.yml
bindings/csharp/Drift/: AppExtensions.cs  Component.cs  DriftApp.cs  EcsComponent.cs  Entity.cs  EntityRef.cs  EntityRegistry.cs  Events.cs  Prelude.cs  StateMachine.cs  Systems.cs
bindings/csharp/Drift.Native/: DriftNative.cs
bindings/csharp/Drift/components/: Animator.cs  BoxCollider.cs  CameraComponent.cs  CircleCollider.cs  Follow.cs  ParticleEffect.cs  RigidBody.cs  Shake.cs  SpriteRenderer.cs  Timer.cs  Trail.cs
bindings/csharp/FlappyBird/: FlappyBird.csproj  Program.cs
bindings/swig/: csharp_ext.i  drift.i  drift_system.i  drift_types.i
cmake/: DriftSwig.cmake
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/components/: camera-controllers.md  camera.md  hierarchy.md  particles.md  physics.md  sprite-animation.md  sprite.md  trail-renderer.md  transform.md
docs/src/concepts/: app-and-plugins.md  commands.md  ecs-overview.md  events.md  queries.md  resources.md  state-machine.md  systems.md
docs/src/examples/: asteroid-field.md  fireball.md  flappy-bird.md  hello-sprites.md  particle-storm.md
docs/src/getting-started/: hello-world.md  installation.md  project-structure.md
docs/src/math/: types.md
docs/src/reference/: configuration.md  handles.md  logging.md  types-and-enums.md
docs/src/subsystems/: asset-server.md  audio.md  fonts.md  input.md  physics-resource.md  rendering.md  sprites-and-sheets.md  tilemap.md  ui.md
examples/asteroid_field/: main.cpp
examples/fireball/: main.cpp
examples/flappy_bird/: main.cpp
examples/flappy_bird_csharp/: FlappyBird.csproj  Program.cs
examples/hello_sprites/: main.cpp
examples/hot_reload_demo/: main.cpp
examples/particle_storm/: main.cpp
examples/platformer/: main.cpp
include/drift/: App.h  App.hpp  AssetServer.h  AssetServer.hpp  Bundle.hpp  CollisionBridge.hpp  Commands.h  Commands.hpp  ComponentRegistry.hpp  Config.hpp  Entity.h  Entity.hpp  EntityAllocator.hpp  Events.hpp  Handle.h  Log.h  Log.hpp  Math.hpp  PhysicsSyncSystem.hpp  Plugin.hpp  Query.hpp  QueryTraits.hpp  RenderSnapshot.h  RenderSnapshot.hpp  Resource.h  Resource.hpp  Script.h  Script.hpp  State.hpp  System.h  System.hpp  Types.hpp  World.h  World.hpp  WorldResource.h  asset.h  audio.h  drift.h  ecs.h  font.h  (+9 more)
include/drift/components/: Camera.hpp  CameraController.hpp  GlobalTransform.hpp  Hierarchy.hpp  Name.hpp  ParticleEmitter.hpp  Physics.hpp  Sprite.h  SpriteAnimator.hpp  TrailRenderer.hpp
include/drift/particles/: EmitterConfig.hpp  ParticlePool.hpp
include/drift/plugins/: AudioPlugin.h  AudioPlugin.hpp  CameraPlugin.hpp  DefaultPlugins.h  DefaultPlugins.hpp  FontPlugin.h  FontPlugin.hpp  HierarchyPlugin.hpp  InputPlugin.h  InputPlugin.hpp  ParticlePlugin.h  ParticlePlugin.hpp  PhysicsPlugin.h  PhysicsPlugin.hpp  RendererPlugin.h  RendererPlugin.hpp  SpriteAnimationPlugin.hpp  SpritePlugin.h  SpritePlugin.hpp  TilemapPlugin.h  TilemapPlugin.hpp  TrailPlugin.hpp  UIPlugin.h  UIPlugin.hpp
include/drift/resources/: AudioResource.h  AudioResource.hpp  FontResource.h  FontResource.hpp  InputResource.h  InputResource.hpp  ParticleResource.h  ParticleResource.hpp  ParticleSystemResource.hpp  PhysicsResource.h  PhysicsResource.hpp  RendererResource.h  RendererResource.hpp  SpriteResource.h  SpriteResource.hpp  TilemapResource.h  TilemapResource.hpp  Time.hpp  UIResource.h  UIResource.hpp
src/asset/: asset.cpp
src/audio/: AudioResource.cpp  audio.cpp
src/core/: App.cpp  AssetServer.cpp  HandlePool.h  HandlePool.hpp  Log.cpp  drift.cpp  log.cpp
src/ecs/: Commands.cpp  ScriptSystem.cpp  World.cpp  ecs.cpp
src/font/: FontResource.cpp  font.cpp
src/hotreload/: hotreload.cpp
src/input/: InputResource.cpp  input.cpp
src/particles/: ParticleResource.cpp  ParticleSystem.cpp  particles.cpp
src/physics/: PhysicsResource.cpp  physics.cpp
src/renderer/: RenderSnapshot.cpp  RendererResource.cpp  renderer.cpp  sprite_batch.cpp
src/renderer/shaders/: sprite.frag.glsl  sprite.vert.glsl
src/sprite/: SpriteResource.cpp  sprite.cpp
src/tilemap/: TilemapResource.cpp  tilemap.cpp
src/ui/: UIResource.cpp  ui.cpp
